GB3-1009: fix styling, remove scrollbar within the map overlay

--- a/src/app/map/components/map-attribute-filter/map-attribute-filter.component.scss
+++ b/src/app/map/components/map-attribute-filter/map-attribute-filter.component.scss
@@ -21,15 +21,13 @@
 
 .attribute-filter {
   max-height: inherit;
-  width: map-layout-variables.$map-overlay-width;
+  width: 100%;
 
   &--mobile {
     width: 100%;
   }
 
   .attribute-filter__content {
-    overflow-y: scroll;
-
     &--mobile {
       overflow-y: unset;
     }
